@@ -40,11 +40,13 @@ NOTE: Do not "tidy" or change the indenting here, or we break svn annotate
       my_documents by default (the original may change) (ADAMK)
     - made Padre::Wx::Dialog::ModuleStart configuration translation-safe (ZENOG)
     - Updated German translation (ZENOG)
-    - add Java and BibTeX to MIME types (ZENOG)
+    - Add Java and BibTeX to MIME types (ZENOG)
     - Ack ("find in files") output is now more 'clickable', but still not
       perfect (ZENOG)
     - Fix File::Open3::open3() call to be IPC::Open3::open3() (BRICAS)
     - Fix #969: crash when switching language after using Ack (ZENOG)
+    - Remove unnecessary Wx::gettext calls from Padre::Wx::Dialog::Preferences
+      that lead to missing translations (ZENOG)
 
 0.66 2010.07.01
     - Improved the quality and integration of the default window size (ADAMK)
